// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Toggles Config when application environment is live should contain correct default values 1`] = `
{
  "_environment": "live",
  "ads": {
    "enabled": false,
  },
  "adsNonce": {
    "enabled": false,
  },
  "articleLiteSiteLink": {
    "enabled": true,
  },
  "comscoreAnalytics": {
    "enabled": true,
  },
  "electionBanner": {
    "enabled": false,
  },
  "enableFetchingToggles": {
    "enabled": true,
    "value": "(afaanoromoo|afrique|amharic|arabic|archive|azeri|bengali|burmese|cymrufyw|dari|gahuza|gujarati|hausa|hindi|igbo|indonesia|japanese|korean|kyrgyz|magyarul|marathi|mundo|naidheachdan|nepali|news|newsround|pashto|persian|pidgin|polska|portuguese|punjabi|romania|russian|scotland|serbian|sinhala|somali|sport|swahili|tamil|telugu|thai|tigrinya|turkce|ukchina|ukrainian|urdu|uzbek|vietnamese|ws|yoruba|zhongwen)",
  },
  "eventTracking": {
    "enabled": true,
  },
  "homePageRadioSchedule": {
    "enabled": false,
  },
  "include": {
    "enabled": true,
  },
  "liveRadioSchedule": {
    "enabled": false,
  },
  "midArticleOnwardJourney": {
    "enabled": true,
  },
  "mostRead": {
    "enabled": false,
  },
  "nielsenAnalytics": {
    "enabled": true,
  },
  "onDemandRadioSchedule": {
    "enabled": false,
  },
  "podcastPromo": {
    "enabled": false,
  },
  "preloadLeadImage": {
    "enabled": true,
  },
  "prerollAds": {
    "enabled": true,
  },
  "recentAudioEpisodes": {
    "enabled": true,
    "value": 4,
  },
  "recentPodcastEpisodes": {
    "enabled": true,
    "value": 8,
  },
  "recentVideoEpisodes": {
    "enabled": true,
    "value": 4,
  },
  "scriptLink": {
    "enabled": true,
  },
  "variantCookie": {
    "enabled": true,
  },
  "webVitalsMonitoring": {
    "enabled": true,
  },
}
`;

exports[`Toggles Config when application environment is local should contain correct default values 1`] = `
{
  "_environment": "local",
  "ads": {
    "enabled": true,
  },
  "adsNonce": {
    "enabled": true,
  },
  "articleLiteSiteLink": {
    "enabled": true,
  },
  "comscoreAnalytics": {
    "enabled": true,
  },
  "electionBanner": {
    "enabled": true,
  },
  "enableFetchingToggles": {
    "enabled": false,
    "value": "(afaanoromoo|afrique|amharic|arabic|archive|azeri|bengali|burmese|cymrufyw|dari|gahuza|gujarati|hausa|hindi|igbo|indonesia|japanese|korean|kyrgyz|magyarul|marathi|mundo|naidheachdan|nepali|news|newsround|pashto|persian|pidgin|polska|portuguese|punjabi|romania|russian|scotland|serbian|sinhala|somali|sport|swahili|tamil|telugu|thai|tigrinya|turkce|ukchina|ukrainian|urdu|uzbek|vietnamese|ws|yoruba|zhongwen)",
  },
  "eventTracking": {
    "enabled": true,
  },
  "homePageRadioSchedule": {
    "enabled": true,
  },
  "include": {
    "enabled": true,
  },
  "liveRadioSchedule": {
    "enabled": true,
  },
  "midArticleOnwardJourney": {
    "enabled": true,
  },
  "mostRead": {
    "enabled": true,
  },
  "nielsenAnalytics": {
    "enabled": true,
  },
  "onDemandRadioSchedule": {
    "enabled": true,
  },
  "podcastPromo": {
    "enabled": true,
  },
  "preloadLeadImage": {
    "enabled": true,
  },
  "prerollAds": {
    "enabled": true,
  },
  "recentAudioEpisodes": {
    "enabled": true,
    "value": 4,
  },
  "recentPodcastEpisodes": {
    "enabled": true,
    "value": 8,
  },
  "recentVideoEpisodes": {
    "enabled": true,
    "value": 4,
  },
  "scriptLink": {
    "enabled": true,
  },
  "variantCookie": {
    "enabled": true,
  },
  "webVitalsMonitoring": {
    "enabled": true,
  },
}
`;

exports[`Toggles Config when application environment is test should contain correct default values 1`] = `
{
  "_environment": "test",
  "ads": {
    "enabled": false,
  },
  "adsNonce": {
    "enabled": true,
    "value": "es,mx",
  },
  "articleLiteSiteLink": {
    "enabled": true,
  },
  "comscoreAnalytics": {
    "enabled": true,
  },
  "electionBanner": {
    "enabled": true,
  },
  "enableFetchingToggles": {
    "enabled": true,
    "value": "(afaanoromoo|afrique|amharic|arabic|archive|azeri|bengali|burmese|cymrufyw|dari|gahuza|gujarati|hausa|hindi|igbo|indonesia|japanese|korean|kyrgyz|magyarul|marathi|mundo|naidheachdan|nepali|news|newsround|pashto|persian|pidgin|polska|portuguese|punjabi|romania|russian|scotland|serbian|sinhala|somali|sport|swahili|tamil|telugu|thai|tigrinya|turkce|ukchina|ukrainian|urdu|uzbek|vietnamese|ws|yoruba|zhongwen)",
  },
  "eventTracking": {
    "enabled": true,
  },
  "homePageRadioSchedule": {
    "enabled": true,
  },
  "include": {
    "enabled": true,
  },
  "liveRadioSchedule": {
    "enabled": true,
  },
  "midArticleOnwardJourney": {
    "enabled": true,
  },
  "mostRead": {
    "enabled": true,
  },
  "nielsenAnalytics": {
    "enabled": true,
  },
  "onDemandRadioSchedule": {
    "enabled": true,
  },
  "podcastPromo": {
    "enabled": true,
  },
  "preloadLeadImage": {
    "enabled": true,
  },
  "prerollAds": {
    "enabled": true,
  },
  "recentAudioEpisodes": {
    "enabled": true,
    "value": 4,
  },
  "recentPodcastEpisodes": {
    "enabled": true,
    "value": 8,
  },
  "recentVideoEpisodes": {
    "enabled": true,
    "value": 4,
  },
  "scriptLink": {
    "enabled": true,
  },
  "variantCookie": {
    "enabled": true,
  },
  "webVitalsMonitoring": {
    "enabled": true,
  },
}
`;
